--- a/examples/openai-sql.mdx
+++ b/examples/openai-sql.mdx
@@ -67,12 +67,11 @@ async def text_to_sql(text: str):
         messages=[
             cl.GenerationMessage(
                 role="user",
-                template=template,
-                formatted=template.format(input=text),
+                content=template.format(input=text),
             )
         ],
         settings=settings,
-        inputs={"input": text},
+        variables={"input": text},
     )
 
     # Call OpenAI
