--- a/advanced-features/prompt-playground/overview.mdx
+++ b/advanced-features/prompt-playground/overview.mdx
@@ -8,7 +8,7 @@ title: Overview
 
 The Prompt Playground is a unique feature that allows developers to visualize, iterate, and version prompts, thereby enhancing the development/debugging process.
 
-Whether you're dealing with multi-step agents or trying to understand why a completion didn't turn out as expected, the Prompt Playground provides a clear view of the exact prompt sent to the LLM, including the template, variables, LLM settings, and provider.
+Whether you're dealing with multi-step agents or trying to understand why a completion didn't turn out as expected, the Prompt Playground provides a clear view of the exact prompt sent to the LLM, including the variables, LLM settings, and provider.
 
 This feature not only helps in identifying issues but also allows you to modify the prompt or change the LLM settings or provider for better results.
 
@@ -24,22 +24,12 @@ This documentation will guide you through the various functionalities of the Pro
     Learn how to enable the Prompt Playground in the Chainlit UI.
   </Card>
   <Card
-    title="Template & Variables"
-    icon="highlighter"
-    color="#0285c7"
-    href="/advanced-features/prompt-playground/template-and-variables"
-  >
-    Learn how to leverage template and variables to speed up your dev/debug
-    cycle.
-  </Card>
-  <Card
     title="Formatted Prompt"
     icon="message-lines"
     color="#16a34a"
     href="/advanced-features/prompt-playground/formatted-prompts"
   >
-    Learn how to do a lighter integration while still speeding up your dev/debug
-    cycle.
+    Learn how to use the Prompt Playground to speed up your dev/debug cycle.
   </Card>
   <Card
     title="LLM Providers"
