--- a/advanced-features/prompt-playground/setup.mdx
+++ b/advanced-features/prompt-playground/setup.mdx
@@ -24,10 +24,10 @@ from openai import AsyncOpenAI
 from chainlit.playground.providers import ChatOpenAI
 import chainlit as cl
 
-client = AsyncOpenAI(api_key="YOUR_OPENAI_API_KEY")
+client = AsyncOpenAI()
 
 template = "Hello, {name}!"
-inputs = {"name": "John"}
+variables = {"name": "John"}
 
 settings = {
     "model": "gpt-3.5-turbo",
@@ -40,26 +40,29 @@ settings = {
 async def call_llm():
     generation = cl.ChatGeneration(
         provider=ChatOpenAI.id,
-        inputs=inputs,
+        variables=variables,
         settings=settings,
         messages=[
             cl.GenerationMessage(
-                template=template, formatted=template.format(**inputs), role="assistant"
+                content=template.format(**variables), role="user"
             ),
         ],
     )
 
     # Make the call to OpenAI
     response = await client.chat.completions.create(
-        messages=[m.to_openai() for m in generation.messages], **settings
+        messages=generation.messages, **settings
     )
 
-    generation.completion = response.choices[0].message.content
+    generation.message_completion = cl.GenerationMessage(
+        content=response.choices[0].message.content,
+        role="assistant"
+    )
 
     # Add the generation to the current step
     cl.context.current_step.generation = generation
 
-    return generation.completion
+    return generation.message_completion["content"]
 
 
 @cl.on_chat_start
