--- a/api-reference/generation/completion-generation.mdx
+++ b/api-reference/generation/completion-generation.mdx
@@ -7,32 +7,64 @@ It is designed to be passed to a [Step](/concepts/step) to enable the [Prompt Pl
 
 ## Attributes
 
-<ParamField path="template" type="str" optional>
-  The template of the prompt.
+<ParamField path="model" type="str" optional>
+  The LLM model used.
 </ParamField>
 
-<ParamField path="formatted" type="str" optional>
-  The formatted version of the template.
+<ParamField path="prompt" type="str" optional>
+  The LLM prompt.
 </ParamField>
 
 <ParamField path="completion" type="str" optional>
   The completion of the prompt.
 </ParamField>
 
-<ParamField path="template_format" type="str" optional>
-  The format of the template, defaults to "f-string".
-</ParamField>
-
-<ParamField path="inputs" type="Dict[str, str]" optional>
-  The inputs (variables) to the prompt, represented as a dictionary.
+<ParamField path="variables" type="Dict[str, str]" optional>
+  The variables of the prompt, represented as a dictionary.
 </ParamField>
 
 <ParamField path="provider" type="str" optional>
   The provider of the LLM, such as "openai".
 </ParamField>
 
+<ParamField path="tools" type="List[Dict]" optional>
+  The list of tools that can be used by the LLM.
+</ParamField>
+
 <ParamField path="settings" type="Dict[str, Any]" optional>
   The settings the LLM provider was called with.
+</ParamField>
+
+<ParamField path="error" type="str" optional>
+  The error returned by the LLM.
+</ParamField>
+
+<ParamField path="tags" type="str" optional>
+  The tags you want to assign to this generation.
+</ParamField>
+
+<ParamField path="tags" type="str" optional>
+  The tags you want to assign to this generation.
+</ParamField>
+
+<ParamField path="input_token_count" type="int" optional>
+  Total tokens sent to the LLM.
+</ParamField>
+
+<ParamField path="output_token_count" type="int" optional>
+  Total tokens returned by the LLM
+</ParamField>
+
+<ParamField path="tt_first_token" type="float" optional>
+  Time from the request to receiving the first token.
+</ParamField>
+
+<ParamField path="token_throughput_in_s" type="float" optional>
+  LLM speed of token generation, in tokens per second.
+</ParamField>
+
+<ParamField path="duration" type="float" optional>
+  Total duration of the LLM request.
 </ParamField>
 
 ## Example
@@ -51,7 +83,7 @@ This is a variable1 {variable1}
 And this is variable2 {variable2}
 """
 
-inputs = {
+variables = {
     "variable1": "variable1 value",
     "variable2": "variable2 value",
 }
@@ -72,16 +104,16 @@ async def fake_llm():
 
     fake_completion = "The openai completion"
 
-    formatted_template = template.format(**inputs)
+    prompt = template.format(**variables)
 
     # Add the generation to the current step
     cl.context.current_step.generation = cl.CompletionGeneration(
+        model=settings["model"],
         provider=OpenAI.id,
         completion=fake_completion,
-        inputs=inputs,
+        variables=variables,
         settings=settings,
-        template=template,
-        formatted=formatted_template,
+        prompt=prompt,
     )
 
     return fake_completion
