--- a/api-reference/generation/chat-generation.mdx
+++ b/api-reference/generation/chat-generation.mdx
@@ -12,10 +12,11 @@ It is designed to be passed to a [Step](/concepts/step) to enable the [Prompt Pl
 </ParamField>
 
 <ParamField path="message_completion" type="GenerationMessage" optional>
-  The completion of the prompt. More info in [GenerationMessage](/api-reference/generation/generation-message).
+  The completion of the prompt. More info in
+  [GenerationMessage](/api-reference/generation/generation-message).
 </ParamField>
 
-<ParamField path="variables" type="Dict[str, str]" optional>
+<ParamField path="variables" type="Dict[str, Any]" optional>
   The variables to the prompt, represented as a dictionary.
 </ParamField>
 
@@ -44,16 +45,16 @@ It is designed to be passed to a [Step](/concepts/step) to enable the [Prompt Pl
   The tags you want to assign to this generation.
 </ParamField>
 
-<ParamField path="tags" type="str" optional>
-  The tags you want to assign to this generation.
-</ParamField>
-
 <ParamField path="input_token_count" type="int" optional>
   Total tokens sent to the LLM.
 </ParamField>
 
 <ParamField path="output_token_count" type="int" optional>
   Total tokens returned by the LLM
+</ParamField>
+
+<ParamField path="token_count" type="int" optional>
+  Total tokens used by the LLM.
 </ParamField>
 
 <ParamField path="tt_first_token" type="float" optional>
@@ -109,18 +110,18 @@ async def fake_llm():
     cl.context.current_step.generation = cl.ChatGeneration(
         model=settings["model"],
         provider=ChatOpenAI.id,
-        message_completion=cl.GenerationMessage(
-          content=fake_completion, role="assistant"
-        ),
+        message_completion={
+          "content": fake_completion, "role": "assistant"
+        },
         variables=variables,
         settings=settings,
         messages=[
-            cl.GenerationMessage(
-                content="You are a helpful assistant.", role="system"
-            ),
-            cl.GenerationMessage(
-                content=prompt, role="user"
-            ),
+            {
+                "content": "You are a helpful assistant.", "role": "system"
+            },
+            {
+                "content": prompt, "role": "user"
+            },
         ],
     )
 
