--- a/customisation/custom-css.mdx
+++ b/customisation/custom-css.mdx
@@ -1,5 +1,5 @@
 ---
-title: Custom CSS
+title: CSS
 ---
 
 Chainlit Application allows for design customization through the use of a custom CSS stylesheet. To enable this, modify your configuration settings in .chainlit/config.toml.
