--- a/guides/migration/1.0.300.mdx
+++ b/guides/migration/1.0.300.mdx
@@ -1,10 +1,8 @@
 ---
-title: Migration Guide to Chainlit vX.X.X
+title: Migrate to Chainlit v1.0.300
 ---
 
-<Note>
-  Join the discord for live updates: https://discord.gg/AzyvDHWARx
-</Note>
+<Note>Join the discord for live updates: https://discord.gg/AzyvDHWARx</Note>
 
 ## Updating Chainlit
 
@@ -37,8 +35,8 @@ New optional properties:
 - model
 - error
 - tags
-- input_token_count 
-- output_token_count 
+- input_token_count
+- output_token_count
 - tt_first_token
 - token_throughput_in_s
 - duration
@@ -87,4 +85,3 @@ Removed properties:
 
 - template
 - templateFormat
-
