--- a/api-reference/generation/chat-generation.mdx
+++ b/api-reference/generation/chat-generation.mdx
@@ -7,12 +7,17 @@ It is designed to be passed to a [Step](/concepts/step) to enable the [Prompt Pl
 
 ## Attributes
 
-<ParamField path="completion" type="str" optional>
-  The completion of the prompt.
+<ParamField path="model" type="str" optional>
+  The LLM model used.
 </ParamField>
 
-<ParamField path="inputs" type="Dict[str, str]" optional>
-  The inputs (variables) to the prompt, represented as a dictionary.
+<ParamField path="message_completion" type="GenerationMessage" optional>
+  The completion of the prompt. More info in
+  [GenerationMessage](/api-reference/generation/generation-message).
+</ParamField>
+
+<ParamField path="variables" type="Dict[str, Any]" optional>
+  The variables to the prompt, represented as a dictionary.
 </ParamField>
 
 <ParamField path="messages" type="List[GenerationMessage]" optional>
@@ -23,9 +28,45 @@ It is designed to be passed to a [Step](/concepts/step) to enable the [Prompt Pl
   The provider of the LLM, such as "openai-chat".
 </ParamField>
 
+<ParamField path="tools" type="List[Dict]" optional>
+  The list of tools that can be used by the LLM.
+</ParamField>
+
 <ParamField path="settings" type="Dict[str, Any]" optional>
   The settings the LLM provider was called with. Can include OpenAI tools and
   functions.
+</ParamField>
+
+<ParamField path="error" type="str" optional>
+  The error returned by the LLM.
+</ParamField>
+
+<ParamField path="tags" type="str" optional>
+  The tags you want to assign to this generation.
+</ParamField>
+
+<ParamField path="input_token_count" type="int" optional>
+  Total tokens sent to the LLM.
+</ParamField>
+
+<ParamField path="output_token_count" type="int" optional>
+  Total tokens returned by the LLM
+</ParamField>
+
+<ParamField path="token_count" type="int" optional>
+  Total tokens used by the LLM.
+</ParamField>
+
+<ParamField path="tt_first_token" type="float" optional>
+  Time from the request to receiving the first token.
+</ParamField>
+
+<ParamField path="token_throughput_in_s" type="float" optional>
+  LLM speed of token generation, in tokens per second.
+</ParamField>
+
+<ParamField path="duration" type="float" optional>
+  Total duration of the LLM request.
 </ParamField>
 
 ## Example
@@ -44,7 +85,7 @@ This is a variable1 {variable1}
 And this is variable2 {variable2}
 """
 
-inputs = {
+variables = {
     "variable1": "variable1 value",
     "variable2": "variable2 value",
 }
@@ -63,18 +104,24 @@ async def fake_llm():
 
     fake_completion = "The openai completion"
 
-    formatted_template = template.format(**inputs)
+    prompt = template.format(**variables)
 
     # Add the generation to the current step
     cl.context.current_step.generation = cl.ChatGeneration(
+        model=settings["model"],
         provider=ChatOpenAI.id,
-        completion=fake_completion,
-        inputs=inputs,
+        message_completion={
+          "content": fake_completion, "role": "assistant"
+        },
+        variables=variables,
         settings=settings,
         messages=[
-            cl.GenerationMessage(
-                template=template, formatted=formatted_template, role="system"
-            ),
+            {
+                "content": "You are a helpful assistant.", "role": "system"
+            },
+            {
+                "content": prompt, "role": "user"
+            },
         ],
     )
 
