update custom data layer

--- a/data-persistence/custom.mdx
+++ b/data-persistence/custom.mdx
@@ -4,6 +4,6 @@ title: Custom Data Layer
 
 Literal provides the simplest way to persist, analyze and monitor your data.
 
-If you absolutely need to implement a custom data layer, you can do so by doing something similar to [this](https://github.com/Chainlit/chainlit/blob/main/cypress/e2e/data_layer/main.py).
+If you're considering implementing a custom data layer, check out this example [here](https://github.com/Chainlit/chainlit/blob/main/cypress/e2e/data_layer/main.py) for some inspiration.
 
-<Note>The Chainlit team will not provide support for custom data layers.</Note>
+Also, we would absolutely love to see a community-led open source data layer implementation and list it here. If you're interested in contributing, please reach out to us on Discord.
