add openai integration

--- a/get-started/overview.mdx
+++ b/get-started/overview.mdx
@@ -32,6 +32,14 @@ Chainlit is compatible with all Python programs and libraries. That being said, 
 
 <CardGroup cols={2}>
   <Card
+  title="OpenAI"
+  icon="circle"
+  color="#dc2626"
+  href="/integrations/openai">
+    Learn how to explore your OpenAI calls in Chainlit.
+  </Card>
+
+  <Card
   title="LangChain"
   icon="circle"
   color="#ea5a0c"
