--- a/api-reference/step-decorator.mdx
+++ b/api-reference/step-decorator.mdx
@@ -45,10 +45,10 @@ async def my_step():
     current_step = cl.context.current_step
 
     # Override the input of the step
-    current.step.input = "My custom input"
+    current_step.input = "My custom input"
 
     # Override the output of the step
-    current.step.output = "My custom output"
+    current_step.output = "My custom output"
 ```
 
 ## Stream the Output
