remove un-needed serpapi api key

--- a/examples/qa.mdx
+++ b/examples/qa.mdx
@@ -18,7 +18,7 @@ This example has extra dependencies. You can install them with:
 pip install langchain chromadb tiktoken
 ```
 
-Then, you need to go to create an OpenAI key [here](https://platform.openai.com/account/api-keys) and get a SperpApi key [here](https://serpapi.com/).
+Then, you need to go to create an OpenAI key [here](https://platform.openai.com/account/api-keys).
 
 <Note>
   The state of the union file is available
