Fix capitalization in user restrictions

--- a/backend/config/features.mdx
+++ b/backend/config/features.mdx
@@ -25,11 +25,11 @@ title: Features
 </ParamField>
 
 <ParamField path="multi_modal.accept" type="Union[List[str], Dict[str, List[str]]]" default={["*/*"]}>
-  Restrict User to only upload accepted file types.
+  Restrict user to only upload accepted file types.
 </ParamField>
 
 <ParamField path="multi_modal.max_files" type="int" default={20}>
-  Restrict User to upload maximum number of files at a time. 
+  Restrict user to upload maximum number of files at a time. 
 </ParamField>
 
 <ParamField path="multi_modal.max_size_mb" type="int" default={500}>
