Update accepted file types in multi_modal.accept

--- a/backend/config/features.mdx
+++ b/backend/config/features.mdx
@@ -25,7 +25,7 @@ title: Features
 </ParamField>
 
 <ParamField path="multi_modal.accept" type="Union[List[str], Dict[str, List[str]]]" default={["*/*"]}>
-  Restrict user to only upload accepted file types. Example: ["text/plain", "application/pdf", "image/x-png"]
+  Restrict user to only upload accepted mime file types. Example: ["text/plain", "application/pdf", "image/x-png"]
 </ParamField>
 
 <ParamField path="multi_modal.max_files" type="int" default={20}>
