Docs for Chainlit PR -> Multi-modal support for file size, mime types and number of files #787 (#108)
* Update multi_modal configuration in features.mdx

* Refactor file upload restrictions in features.mdx

* Fix capitalization in user restrictions

* Update accepted file types for multi-modal uploads

* Update accepted file types in multi_modal.accept

---------

Co-authored-by: oscar <oscar.lindholm@axinter.com>

--- a/backend/config/features.mdx
+++ b/backend/config/features.mdx
@@ -19,9 +19,21 @@ title: Features
   characters in messages.
 </ParamField>
 
-<ParamField path="multi_modal" type="bool" default={true}>
+<ParamField path="multi_modal.enabled" type="bool" default={true}>
   Authorize users to upload files with messages. The files are then accessible
   in [cl.on_message](/api-reference/lifecycle-hooks/on-message).
+</ParamField>
+
+<ParamField path="multi_modal.accept" type="Union[List[str], Dict[str, List[str]]]" default={["*/*"]}>
+  Restrict user to only upload accepted mime file types. Example: ["text/plain", "application/pdf", "image/x-png"]
+</ParamField>
+
+<ParamField path="multi_modal.max_files" type="int" default={20}>
+  Restrict user to upload maximum number of files at a time. 
+</ParamField>
+
+<ParamField path="multi_modal.max_size_mb" type="int" default={500}>
+  Restrict uploading file size (MB). 
 </ParamField>
 
 <ParamField path="speech_to_text.enabled" type="bool" default={false}>
@@ -39,9 +51,13 @@ title: Features
 ```toml
 [features]
 prompt_playground = true
-multi_modal = true
 unsafe_allow_html = false
 latex = false
+[features.multi_modal]
+    enabled = true
+    accept = ["*/*"]
+    max_files = 20
+    max_size_mb = 500
 # Allows user to use speech to text
 [features.speech_to_text]
     enabled = false
