--- a/customisation/translation.mdx
+++ b/customisation/translation.mdx
@@ -4,11 +4,27 @@ title: Translation
 
 Translation files are located in the `.chainlit/translations` directory. The files are named after the language code, e.g. `en-US.json` for English (United States).
 
-<Note>The language is dynamically set for each user based on the language of the browser. The default language is `en-US`.</Note>
+<Note>
+  The language is dynamically set for each user based on the language of the
+  browser. The default language is `en-US`.
+</Note>
 
 ## Adding a new language
 
 To add a new language, create a new file in the `.chainlit/translations` directory with the language code as the filename. The language code should be in the format of `languageCode-COUNTRYCODE`, e.g. `en-US` for English (United States) or `en-GB` for English (United Kingdom).
+
+## Lint translations
+
+To lint the translations, run the following command:
+
+```bash
+chainlit lint-translations
+```
+
+## Translate chainlit.md file
+
+You can define multiple translations for the `chainlit.md` file. For instance `chainlit_pt-BR.md` for Portuguese (Brazil) and `chainlit_es-ES.md` for Spanish (Spain).
+The file will be loaded based on the browser's language, defaulting to `chainlit.md` if no translation is available.
 
 ## Resetting
 
