fix localhost link

--- a/guides/migration/1.0.500.mdx
+++ b/guides/migration/1.0.500.mdx
@@ -24,4 +24,4 @@ Since translation files have been updated, you need to regenerate them. To do so
 
 ### 2. Update the multi_modal config setting
 
-The `multi_modal` config setting has been updated. You can either remove the entire `./chainlit/config.toml` file and restart your app or update the `multi_modal` setting manually (example [here](http://localhost:3002/backend/config/features#default-configuration)).
+The `multi_modal` config setting has been updated. You can either remove the entire `./chainlit/config.toml` file and restart your app or update the `multi_modal` setting manually (example [here](/backend/config/features#default-configuration)).
