--- a/integrations/message-based.mdx
+++ b/integrations/message-based.mdx
@@ -1,43 +1,21 @@
 ---
-title: OpenAI
+title: vLLM, LMStudio, HuggingFace
 ---
 
-<Note>
-  We support the OpenAI python library starting at version 1.0.0.
-</Note>
-
-The benefits of this integration is that you can see the OpenAI API calls in a step in the UI, and you can explore them in the prompt playground.
-
-You will also get the full generation details (prompt, completion, tokens per second...) in your Literal dashboard if your project is using Literal.
-
-You need to add `cl.instrument_openai()` after creating your OpenAI client.
+We can leverage the OpenAI instrumentation to log calls from inference servers that use messages-based API, such as vLLM, LMStudio or HuggingFace's TGI. 
 
 <Warning>
-  You shouldn't configure this integration if you're already using another integration like Embedchain, Haystack, Langchain or LlamaIndex. Both integrations would record the same generation and create duplicate steps in the UI.
+  You shouldn't configure this integration if you're already using another integration like Haystack, LangChain or LlamaIndex. Both integrations would record the same generation and create duplicate steps in the UI.
 </Warning>
 
-## Prerequisites
-
-Before getting started, make sure you have the following:
-
-- A working installation of Chainlit
-- The OpenAI package installed
-- An OpenAI API key
-- Basic understanding of Python programming
-
-## Step 1: Create a Python file
-
 Create a new Python file named `app.py` in your project directory. This file will contain the main logic for your LLM application.
-
-## Step 2: Write the Application Logic
 
 In `app.py`, import the necessary packages and define one function to handle messages incoming from the UI.
 
 ```python
 from openai import AsyncOpenAI
 import chainlit as cl
-client = AsyncOpenAI()
-
+client = AsyncOpenAI(base_url="http://localhost:1234/v1", api_key="lm-studio")
 # Instrument the OpenAI client
 cl.instrument_openai()
 
@@ -65,11 +43,7 @@ async def on_message(message: cl.Message):
     await cl.Message(content=response.choices[0].message.content).send()
 ```
 
-## Step 3: Fill the environment variables
-
-Create a file named `.env` in the same folder as your `app.py` file. Add your OpenAI API key in the `OPENAI_API_KEY` variable. You can optionally add your Literal API key in the `LITERAL_API_KEY`.
-
-## Step 4: Run the Application
+Create a file named `.env` in the same folder as your `app.py` file. Add your OpenAI API key in the `OPENAI_API_KEY` variable. You can optionally add your [Literal](https://cloud.getliteral.ai) API key in the `LITERAL_API_KEY`.
 
 To start your app, open a terminal and navigate to the directory containing `app.py`. Then run the following command:
 
