Fix incorrect variable name in OpenAI example (#118)
- replaces undefined `input` by `message.content`

--- a/integrations/openai.mdx
+++ b/integrations/openai.mdx
@@ -56,7 +56,7 @@ async def on_message(message: cl.Message):
                 "role": "system"
             },
             {
-                "content": input,
+                "content": message.content,
                 "role": "user"
             }
         ],
