enhance avatar doc with local example

--- a/api-reference/elements/avatar.mdx
+++ b/api-reference/elements/avatar.mdx
@@ -39,6 +39,13 @@ async def start():
         url="https://avatars.githubusercontent.com/u/128686189?s=400&u=a1d1553023f8ea0921fba0debbe92a8c5f840dd9&v=4",
     ).send()
 
+    # Or use a local image file located in your public directory
+    await cl.Avatar(
+        name="Tool 2",
+        url="/public/avatar.png",
+    ).send()
+
+
     await cl.Message(
         content="This message should not have an avatar!", author="Tool 0"
     ).send()
@@ -48,7 +55,6 @@ async def start():
     ).send()
 
     await cl.Message(
-        content="This message should not have an avatar!", author="Tool 2"
+        content="This message should have the local avatar!", author="Tool 2"
     ).send()
-
 ```
