--- a/data-persistence/custom.mdx
+++ b/data-persistence/custom.mdx
@@ -2,7 +2,7 @@
 title: Custom Data Layer
 ---
 
-Literal provides the simplest way to persist, analyze and monitor your data.
+Literal AI provides the simplest way to persist, analyze and monitor your data.
 
 If you're considering implementing a custom data layer, check out this example [here](https://github.com/Chainlit/chainlit/blob/main/cypress/e2e/data_layer/main.py) for some inspiration.
 
