--- a/data-persistence/enterprise.mdx
+++ b/data-persistence/enterprise.mdx
@@ -2,16 +2,16 @@
 title: Enterprise
 ---
 
-If your organization can't use third party cloud services for data hosting, we can provide your company with a self-hostable Literal docker image (under commercial license).
+If your organization can't use third party cloud services for data hosting, we can provide your company with a self-hostable Literal AI docker image (under commercial license).
 
 <Note>
   To request access you can contact us here ->
   https://forms.gle/BX3UNBLmTF75KgZVA.
 </Note>
 
-## Define your Literal Server
+## Define your Literal AI Server
 
-Once you are hosting your own Literal instance, you can point to the server for data persistence.
+Once you are hosting your own Literal AI instance, you can point to the server for data persistence.
 You will need to use the `LITERAL_API_URL` environment variable.
 
 Modify the `.env` file next to your Chainlit application.
@@ -28,6 +28,6 @@ LITERAL_API_URL="https://cloud.your_literal.com" chainlit run main.py
 
 ## Activating Data Persistence
 
-Using your own Literal instance, you will still need to provide a valid API key to persist the data as described [here](/data-persistence/overview).
+Using your own Literal AI instance, you will still need to provide a valid API key to persist the data as described [here](/data-persistence/overview).
 
 Once activated, your chats and elements will be stored on your own server.
