--- a/data-persistence/overview.mdx
+++ b/data-persistence/overview.mdx
@@ -55,7 +55,7 @@ Or inlined:
 LITERAL_API_KEY="your key" chainlit run main.py
 ```
 
-Once activated, your chats and elements will be persisted on Literal.
+Once activated, your chats and elements will be persisted on Literal AI.
 
 ## Deactivation
 
