--- a/integrations/message-based.mdx
+++ b/integrations/message-based.mdx
@@ -43,7 +43,7 @@ async def on_message(message: cl.Message):
     await cl.Message(content=response.choices[0].message.content).send()
 ```
 
-Create a file named `.env` in the same folder as your `app.py` file. Add your OpenAI API key in the `OPENAI_API_KEY` variable. You can optionally add your [Literal](https://cloud.getliteral.ai) API key in the `LITERAL_API_KEY`.
+Create a file named `.env` in the same folder as your `app.py` file. Add your OpenAI API key in the `OPENAI_API_KEY` variable. You can optionally add your [Literal AI](https://cloud.getliteral.ai) API key in the `LITERAL_API_KEY`.
 
 To start your app, open a terminal and navigate to the directory containing `app.py`. Then run the following command:
 
