--- a/deploy/api.mdx
+++ b/deploy/api.mdx
@@ -1,5 +1,5 @@
 ---
-title: Custom API Endpoints
+title: API
 ---
 
 Chainlit is running a Fast API server that you can extend with your own endpoints.
