--- a/deploy/copilot.mdx
+++ b/deploy/copilot.mdx
@@ -183,9 +183,8 @@ const accessToken = createJwt("user-1", { name: "John Doe" });
 
 </CodeGroup>
 
-## Limitations
+## Supported Features
 
-Currently, Chainlit Copilot does not support:
-
-- User env
-- Chat history
+| Message | Streaming | Elements | Audio | Ask User | Chat History | Chat Profiles | Feedback |
+| ------- | --------- | -------- | ----- | -------- | ------------ | ------------- | -------- |
+| ✅      | ✅        | ✅       | ✅    | ✅       | ❌           | ✅            | ✅       |
