--- a/deploy/react-frontend.mdx
+++ b/deploy/react-frontend.mdx
@@ -1,5 +1,5 @@
 ---
-title: Custom React Frontend
+title: React
 ---
 
 Chainlit allows you to create a custom frontend for your application, offering you the flexibility to design a unique user experience. By integrating your frontend with Chainlit's backend, you can harness the full power of Chainlit's features, including:
@@ -21,3 +21,9 @@ Chainlit allows you to create a custom frontend for your application, offering y
 </Card>
 
 The [@chainlit/react-client](https://www.npmjs.com/package/@chainlit/react-client) package is designed for integrating Chainlit applications with React. It offers several hooks and an API client for seamless connection and interaction.
+
+## Supported Features
+
+| Message | Streaming | Elements | Audio | Ask User | Chat History | Chat Profiles | Feedback |
+| ------- | --------- | -------- | ----- | -------- | ------------ | ------------- | -------- |
+| ✅      | ✅        | ✅       | ✅    | ✅       | ✅           | ✅            | ✅       |
