--- a/backend/config/features.mdx
+++ b/backend/config/features.mdx
@@ -19,13 +19,13 @@ title: Features
   characters in messages.
 </ParamField>
 
-<ParamField path="multi_modal.enabled" type="bool" default={true}>
+<ParamField path="spontaneous_file_upload.enabled" type="bool" default={true}>
   Authorize users to upload files with messages. The files are then accessible
   in [cl.on_message](/api-reference/lifecycle-hooks/on-message).
 </ParamField>
 
 <ParamField
-  path="multi_modal.accept"
+  path="spontaneous_file_upload.accept"
   type="Union[List[str], Dict[str, List[str]]]"
   default={["*/*"]}
 >
@@ -33,22 +33,38 @@ title: Features
   "application/pdf", "image/x-png"]
 </ParamField>
 
-<ParamField path="multi_modal.max_files" type="int" default={20}>
+<ParamField path="spontaneous_file_upload.max_files" type="int" default={20}>
   Restrict user to upload maximum number of files at a time.
 </ParamField>
 
-<ParamField path="multi_modal.max_size_mb" type="int" default={500}>
+<ParamField path="spontaneous_file_upload.max_size_mb" type="int" default={500}>
   Restrict uploading file size (MB).
 </ParamField>
 
-<ParamField path="speech_to_text.enabled" type="bool" default={false}>
-  Allows user to write messages with speech.
+<ParamField path="audio.min_decibels" type="int">
+  Threshold for audio recording.
 </ParamField>
 
-<ParamField path="speech_to_text.language" type="string">
-  The language spoken by the user. Greatly improve the quality of the
-  transcription. See available languages here
-  https://github.com/JamesBrill/react-speech-recognition/blob/HEAD/docs/API.md#language-string
+<ParamField path="audio.initial_silence_timeout" type="int">
+  If the user does not speak for this duration (MS), the recording will be
+  ignored.
+</ParamField>
+
+<ParamField path="audio.silence_timeout" type="int">
+  Delay for the user to continue speaking in MS. If the user stops speaking for
+  this duration, the recording will stop.
+</ParamField>
+
+<ParamField path="audio.max_duration" type="int">
+  Above this duration (MS), the recording will forcefully stop.
+</ParamField>
+
+<ParamField path="audio.chunk_duration" type="int">
+  Duration of the audio chunks in MS.
+</ParamField>
+
+<ParamField path="audio.sample_rate" type="int">
+  Sample rate of the audio.
 </ParamField>
 
 <ParamField path="auto_tag_thread" type="bool">
@@ -63,14 +79,17 @@ title: Features
 prompt_playground = true
 unsafe_allow_html = false
 latex = false
-[features.multi_modal]
+[features.spontaneous_file_upload]
     enabled = true
     accept = ["*/*"]
     max_files = 20
     max_size_mb = 500
-# Allows user to use speech to text
-[features.speech_to_text]
-    enabled = false
-    # language = "en-US"
+[features.audio]
+    min_decibels = -45
+    initial_silence_timeout = 3000
+    silence_timeout = 1500
+    max_duration = 15000
+    chunk_duration = 1000
+    sample_rate = 44100
 auto_tag_thread = true
 ```
